# CppForProgramers

./: .gitignore  README.md
Oving1/: CMakeLists.txt  main.cpp
Oving2/: CMakeLists.txt  Oppgaver.txt  main.cpp
Oving3/: CMakeLists.txt  main.cpp  vare.cpp
Oving4/: CMakeLists.txt  main.cpp
Oving5/: CMakeLists.txt  main.cpp
Oving6/: CMakeLists.txt  echo_server.cpp  main.cpp
Oving7/: CMakeLists.txt  brok.cpp  brok.h  brok_main.cpp
Oving7/set/: CMakeLists.txt  main.cpp  set.cpp  set.hpp
Oving8/: CMakeLists.txt  exercise1.cpp  exercise2.cpp
